Video2_Key bugfix

--- a/Python_Video2_Key.ipynb
+++ b/Python_Video2_Key.ipynb
@@ -56,21 +56,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-21T14:53:14.142065Z",
      "start_time": "2020-01-21T14:53:08.617590Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'rdkit'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-7dc9586ff9ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mrdkit\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mChem\u001b[0m \u001b[0;31m#RDKIT is a useful package for drawing molecules and operating on them\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrdkit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDraw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mrdkit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChem\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAllChem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#functions that operate on the PAH database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mPAH_data\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mselect_molecule\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatprint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmol_with_atom_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_molecule\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_MO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rdkit'"
+     ]
+    }
+   ],
    "source": [
     "from rdkit import Chem #RDKIT is a useful package for drawing molecules and operating on them\n",
     "import rdkit.Chem.Draw\n",
     "from rdkit.Chem import AllChem\n",
-    "from IPython.display import SVG, display\n",
     "#functions that operate on the PAH database\n",
-    "from PAH_data import select_molecule, matprint, mol_with_atom_index\n",
+    "from PAH_data import select_molecule, matprint, mol_with_atom_index, draw_molecule, draw_MO\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#######################\n",
@@ -89,32 +100,36 @@
     "    rdkit_objects.append(mol_object)\n",
     "\n",
     "#These rdkit objects are stored in the 'molecules' list. \n",
-    "#Together with other thigns, they contain the connectivity matrices\n",
+    "#Together with other things, they contain the connectivity matrices\n",
     "\n",
-    "#list of three connnectivity/huckel matrices\n",
+    "#####The following is all the information you will need\n",
+    "\n",
+    "#list of  connnectivity/huckel matrices for three molecules\n",
     "conmats = [(molecules[0])['conmat'], molecules[1]['conmat'], molecules[2]['conmat']]\n",
     "#list of three molecule names\n",
     "names = names\n",
     "#list of three RDKIT molecule objects for visualization\n",
     "molecules = rdkit_objects\n",
     "\n",
+    "################Visualization\n",
+    "\n",
     "#The RDKIT molecule objects can be used for visualization\n",
-    "#display without atom numbering\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([molecules[0]], useSVG=True, legends=[names[0]], subImgSize=(300,300))))\n",
-    "#display with numbering\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[0])], useSVG=True, legends=[names[0]], subImgSize=(300,300))))\n",
+    "#display molecule 1\n",
+    "draw_molecule(molecules[0], legend=names[0])\n",
+    "\n",
+    "#display molecule 1 with numbering\n",
+    "draw_molecule(mol_with_atom_index(molecules[0]), legend=names[0])\n",
     "#print the connectivity matrix for molecule 1\n",
     "matprint(conmats[0])\n",
     "\n",
     "#molecule 2\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[1])], useSVG=True, legends=[names[1]], subImgSize=(300,300))))\n",
-    "matprint(conmats[1])\n",
+    "draw_molecule(mol_with_atom_index(molecules[1]), legend=names[1])\n",
+    "matprint(conmats[1]) # print matrix for mol 2\n",
     "\n",
     "#molecule 3\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[2])], useSVG=True, legends=[names[2]], subImgSize=(300,300))))\n",
-    "matprint(conmats[2])\n",
-    "#This line generates the picture of the three molecules\n",
-    "\n"
+    "draw_molecule(mol_with_atom_index(molecules[2]), legend=names[2])\n",
+    "matprint(conmats[2]) # print matrix for mol 3\n",
+    "#This line generates the picture of the three molecules\n"
    ]
   },
   {
@@ -206,7 +221,7 @@
     "huckel_matrix = mol['conmat']\n",
     "\n",
     "#draw molecule from rdkit mol object\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([rdkit_mol], useSVG=True, legends=['Acenaphthalene'], subImgSize=(160,160))))\n",
+    "draw_molecule(rdkit_mol, legend=['Acenaphthalene'])\n",
     "\n",
     "#print hueckel matrix\n",
     "matprint(huckel_matrix)"
